--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,16 @@ div {
     display: flex;
 }
 
+.container {
+    margin-bottom: 20px;
+}
+
 .playerDiv, .computerDiv {
     width: 50%;
     padding: 10px 0 30px 10px;
 }
 
-.computerChooses, .winnerText {
+.computerChooses, .winnerText, .finalScore, .theWinner {
     min-height: 40px;
     margin-bottom:20px;
 }
