Feat: add logic of boxing type scoreboard
rounds are scored on a 10-9 basis with the
total adding up in the scoreboard.

To-Do: score drawn rounds 9-9
To-Do: Finish game after 5 rounds, regardless of score

--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,15 @@ div {
     min-height: 40px;
     margin-bottom:20px;
 }
+
+.scoreboardNew {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.roundOne, .roundTwo,
+.roundThree, .roundFour,
+.roundFive, .scoreFinal {
+    min-width:40px;
+}
